hphp/test/zend/good/Zend/tests/traits/error_009.php.expectf

Fatal error: Class foo may not inherit from final class (abc) in %s/error_009.php on line 5
